--- a/sidebar.html
+++ b/sidebar.html
@@ -116,5 +116,14 @@
     </form>
 </div>
 <script src="popup.js"></script>
+<!-- Custom Modal Dialogs -->
+<div id="modalOverlay" class="modal-overlay">
+    <div class="modal-dialog">
+        <div id="modalTitle" class="modal-title"></div>
+        <div id="modalMessage" class="modal-message"></div>
+        <input type="text" id="modalInput" class="modal-input" style="display: none;">
+        <div class="modal-buttons" id="modalButtons"></div>
+    </div>
+</div>
 </body>
 </html>
