--- a/sidebar.html
+++ b/sidebar.html
@@ -121,7 +121,7 @@
         <div id="message"></div>
     </form>
 </div>
-<script src="popup.js"></script>
+<script type="module" src="popup.js"></script>
 <!-- Custom Modal Dialogs -->
 <div id="modalOverlay" class="modal-overlay">
     <div class="modal-dialog">
